Fix: Logo too small
Remove max-height restriction causing logo to appear much smaller than intended.

--- a/public/assets/css/theme.css
+++ b/public/assets/css/theme.css
@@ -10157,7 +10157,6 @@ a.text-body:focus {
 .navbar-brand-img,
 .navbar-brand > img {
 	max-width: 100%;
-	max-height: 1.1rem;
 }
 .navbar-collapse {
 	margin-right: -1rem;
@@ -10543,7 +10542,6 @@ a.text-body:focus {
 	text-align: center;
 }
 .navbar-vertical.navbar-expand-xs .navbar-brand-img {
-	max-height: 2.0rem;
 }
 .navbar-vertical.navbar-expand-xs .navbar-user {
 	margin-right: -1.5rem;
@@ -10636,7 +10634,6 @@ a.text-body:focus {
 		text-align: center;
 	}
 	.navbar-vertical.navbar-expand-sm .navbar-brand-img {
-		max-height: 2.1rem;
 	}
 	.navbar-vertical.navbar-expand-sm .navbar-user {
 		margin-right: -1.5rem;
@@ -10730,7 +10727,6 @@ a.text-body:focus {
 		text-align: center;
 	}
 	.navbar-vertical.navbar-expand-md .navbar-brand-img {
-		max-height: 1.8rem;
 	}
 	.navbar-vertical.navbar-expand-md .navbar-user {
 		margin-right: -1.5rem;
@@ -10824,7 +10820,6 @@ a.text-body:focus {
 		text-align: center;
 	}
 	.navbar-vertical.navbar-expand-lg .navbar-brand-img {
-		max-height: 2.5rem;
 	}
 	.navbar-vertical.navbar-expand-lg .navbar-user {
 		margin-right: -1.5rem;
@@ -10918,7 +10913,6 @@ a.text-body:focus {
 		text-align: center;
 	}
 	.navbar-vertical.navbar-expand-xl .navbar-brand-img {
-		max-height: 2.5rem;
 	}
 	.navbar-vertical.navbar-expand-xl .navbar-user {
 		margin-right: -1.5rem;
